fix: sample scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
-
 * {
   margin: 0;
   padding: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -59,3 +61,16 @@ section:last-child {
     font-size: 1.5rem;
   }
 }
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 6px;
+  border-radius: 13px;
+  border: 10px solid transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px;
+  background-color: #d19a08;
+}
+/*# sourceMappingURL=App.css.map */
